// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokensForm component should render a form to configure a token vote with 3 token categories 1`] = `
<div
  className="token-vote-form"
>
  <form>
    <FormControlWithLabel
      helperText="Depending on the objective of the token module, incite the participants to take action."
      helperUrl="/static2/img/helpers/helper5.png"
      label="Instructions for the token vote"
      labelAlwaysVisible={false}
      onChange={[MockFunction]}
      required={true}
      type="text"
      value="Je vous prie de bien vouloir voter."
    />
    <label
      htmlFor="input-dropdown-addon"
    >
      Number of token types
    </label>
    <div
      className="inline"
    >
      <Connect(Helper)
        helperText="Select the number of different token types for this vote"
        helperUrl="/static2/img/helpers/helper2.jpg"
      />
    </div>
    <div>
      <SplitButton
        className="admin-dropdown"
        id="input-dropdown-addon"
        onSelect={[Function]}
        required={true}
        title={3}
      >
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={1}
          header={false}
        >
          1
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={2}
          header={false}
        >
          2
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={3}
          header={false}
        >
          3
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={4}
          header={false}
        >
          4
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={5}
          header={false}
        >
          5
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={6}
          header={false}
        >
          6
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={7}
          header={false}
        >
          7
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={8}
          header={false}
        >
          8
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={9}
          header={false}
        >
          9
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={10}
          header={false}
        >
          10
        </MenuItem>
      </SplitButton>
    </div>
    <div
      style={
        Object {
          "marginTop": "25px",
        }
      }
    >
      <label
        htmlFor="input-dropdown-exclusive"
      >
        Exclusive
      </label>
      <Connect(Helper)
        additionalTextClasses="helper-text-only"
        classname="inline"
        helperText="You can decide wether the participant can distribute a single type of token (exclusive) or several types of token per proposal."
      />
      <SplitButton
        className="admin-dropdown"
        id="input-dropdown-exclusive"
        onSelect={[Function]}
        title="Not exclusive"
      >
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={false}
          header={false}
        >
          <Translate
            value="administration.exclusive"
          />
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={false}
          header={false}
        >
          <Translate
            value="administration.notExclusive"
          />
        </MenuItem>
      </SplitButton>
    </div>
    <div>
      <div
        className="separator"
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="1234"
        index={0}
        moduleId="my-tokens-form"
        tokenCategoryNumber={3}
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="5678"
        index={1}
        moduleId="my-tokens-form"
        tokenCategoryNumber={3}
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="9874"
        index={2}
        moduleId="my-tokens-form"
        tokenCategoryNumber={3}
      />
    </div>
  </form>
</div>
`;

exports[`tokensForm component should render a form to configure a token vote with one token category 1`] = `
<div
  className="token-vote-form"
>
  <form>
    <FormControlWithLabel
      helperText="Depending on the objective of the token module, incite the participants to take action."
      helperUrl="/static2/img/helpers/helper5.png"
      label="Instructions for the token vote"
      labelAlwaysVisible={false}
      onChange={[MockFunction]}
      required={true}
      type="text"
      value="Je vous prie de bien vouloir voter."
    />
    <label
      htmlFor="input-dropdown-addon"
    >
      Number of token types
    </label>
    <div
      className="inline"
    >
      <Connect(Helper)
        helperText="Select the number of different token types for this vote"
        helperUrl="/static2/img/helpers/helper2.jpg"
      />
    </div>
    <div>
      <SplitButton
        className="admin-dropdown"
        id="input-dropdown-addon"
        onSelect={[Function]}
        required={true}
        title={1}
      >
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={1}
          header={false}
        >
          1
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={2}
          header={false}
        >
          2
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={3}
          header={false}
        >
          3
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={4}
          header={false}
        >
          4
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={5}
          header={false}
        >
          5
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={6}
          header={false}
        >
          6
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={7}
          header={false}
        >
          7
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={8}
          header={false}
        >
          8
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={9}
          header={false}
        >
          9
        </MenuItem>
        <MenuItem
          bsClass="dropdown"
          disabled={false}
          divider={false}
          eventKey={10}
          header={false}
        >
          10
        </MenuItem>
      </SplitButton>
    </div>
    <div>
      <div
        className="separator"
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="1234"
        index={0}
        moduleId="my-tokens-form"
        tokenCategoryNumber={1}
      />
    </div>
  </form>
</div>
`;
